@@ -22,13 +22,13 @@
 				<expression clear="yes">/title/([t0-9]*)/faq</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\1&lt;/title&gt;&lt;year&gt;\2&lt;/year&gt;&lt;url cache=&quot;$$7-main.html&quot;&gt;http://akas.imdb.com/title/$$7/&lt;/url&gt;&lt;id&gt;$$7&lt;/id&gt;&lt;/entity&gt;" dest="5">
-				<expression clear="yes" noclean="1">&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\d]*?([0-9]*)\)</expression>
+				<expression clear="yes" noclean="1">&lt;meta name="title" content="(?:&amp;#x22;)?([^"]*?)(?:&amp;#x22;)? \([^\(]*?([0-9]{4})\)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="\1" dest="4">
 				<expression noclean="1">(&gt;&lt;a href=&quot;/title.*)</expression>
 			</RegExp>
 			<RegExp input="$$4" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;year&gt;\3&lt;/year&gt;&lt;url cache=&quot;\1-main.html&quot;&gt;http://akas.imdb.com/title/\1/&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;/entity&gt;" dest="5+">
-				<expression repeat="yes" noclean="1,2">&gt;&lt;a href=&quot;/title/([t0-9]*)/[^&gt;]*&gt;(?:&amp;#x22;)?([^&lt;]*?)(?:&amp;#x22;)?&lt;/a&gt; *\([^\d]*?([0-9]{4})</expression>
+				<expression repeat="yes" noclean="1,2">&gt;&lt;a href=&quot;/title/([t0-9]*)/[^&gt;]*&gt;(?:&amp;#x22;)?([^&lt;]*?)(?:&amp;#x22;)?&lt;/a&gt; *\([^\(]*?([0-9]{4})</expression>
 			</RegExp>
 			<expression clear="yes" noclean="1"/>
 		</RegExp>
@@ -39,13 +39,13 @@
 				<expression/>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;originaltitle&gt;\1&lt;/originaltitle&gt;" dest="5+">
-				<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\d]*?([0-9]*)\)</expression>
+				<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\(]*?([0-9]{4})\)</expression>
 			</RegExp>
 			<RegExp input="$$2" output="&lt;chain function=&quot;GetIMDBAKATitlesById&quot;&gt;\1&lt;/chain&gt;" dest="5+">
 				<expression>(tt[t0-9]*)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;year&gt;\2&lt;/year&gt;" dest="5+">
-				<expression>&lt;meta name=&quot;title&quot; content=&quot;([^&quot;]*?) \([^\d]*?([0-9]*)\)</expression>
+				<expression>&lt;meta name=&quot;title&quot; content=&quot;([^&quot;]*?) \([^\(]*?([0-9]{4})\)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;top250&gt;\1&lt;/top250&gt;" dest="5+">
 				<expression>Top 250 #([0-9]*)&lt;/</expression>
@@ -112,19 +112,19 @@
 			</RegExp>
 			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet480p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="6">
-					<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\d]*?([0-9]*)\)</expression>
+					<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\(]*?([0-9]{4})\)</expression>
 				</RegExp>
 				<expression>480p</expression>
 			</RegExp>
 			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet720p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="6">
-					<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\d]*?([0-9]*)\)</expression>
+					<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\(]*?([0-9]{4})\)</expression>
 				</RegExp>
 				<expression>720p</expression>
 			</RegExp>
 			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet1080p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="6">
-					<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\d]*?([0-9]*)\)</expression>
+					<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\(]*?([0-9]{4})\)</expression>
 				</RegExp>
 				<expression>1080p</expression>
 			</RegExp>
@@ -146,13 +146,13 @@
 			</RegExp>
 			<RegExp input="$$10" output="\1" dest="4">
 				<RegExp input="$$1" output="\1" dest="9">
-					<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\d]*?([0-9]*)\)</expression>
+					<expression>&lt;meta name=&quot;title&quot; content=&quot;(?:&amp;#x22;)?([^&quot;]*?)(?:&amp;#x22;)? \([^\(]*?([0-9]{4})\)</expression>
 				</RegExp>
 				<RegExp input="$$9" output="\1" dest="10">
 					<expression/>
 				</RegExp>
 				<RegExp input="$$1" output="\1" dest="11">
-					<expression>&gt;\s*?"([^&lt;]+)"[^&lt;]+[&lt;em&gt;]?[^"]+(UK|USA|Canada\s(&lt;em&gt;)?\(English title\))</expression>
+					<expression>&gt;\s*?&quot;([^&lt;]+)&quot;[^&lt;]+[&lt;em&gt;]?[^&quot;]+(UK|USA|Canada\s(&lt;em&gt;)?\(English title\))</expression>
 				</RegExp>
 				<RegExp input="$$11" output="\1" dest="10">
 					<expression>(.+)</expression>
@@ -164,7 +164,7 @@
 					<expression>(.+)</expression>
 				</RegExp>
 				<RegExp input="$$1" output="\1" dest="11">
-					<expression>&gt;\s*?"([^&lt;]+)" - International [&lt;em&gt;]?[^"]+English</expression>
+					<expression>&gt;\s*?&quot;([^&lt;]+)" - International [&lt;em&gt;]?[^&quot;]+English</expression>
 				</RegExp>
 				<RegExp input="$$11" output="\1" dest="10">
 					<expression>(.+)</expression>
@@ -181,7 +181,7 @@
 				<expression>(.+)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="\1" dest="4">
-				<expression>&gt;\s*?"([^&lt;]+)"[^&lt;]+[&lt;em&gt;]?[^"]+$INFO[akatitles]</expression>
+				<expression>&gt;\s*?&quot;([^&lt;]+)&quot;[^&lt;]+[&lt;em&gt;]?[^&quot;]+$INFO[akatitles]</expression>
 			</RegExp>
 			<RegExp input="$$4" output="\1" dest="2">
 				<expression>(.+)</expression>
