@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <settings>
-    <setting label="30000" type="bool" id="fullcredits" default="false"/>
     <setting label="30002" type="bool" id="tmdbthumbs" default="true"/>
-    <setting label="30001" type="bool" id="fanart" default="true"/>
     <setting label="30003" type="bool" id="impawards" default="false"/>
     <setting label="30004" type="bool" id="movieposterdb" default="false"/>
+    <setting type="sep"/>
+    <setting label="30001" type="bool" id="fanart" default="true"/>
+    <setting type="sep"/>
     <setting label="30006" type="labelenum" values="No|480p|720p|1080p" id="TrailerQ" default="480p"/>
     <setting label="30005" type="bool" id="imdbtrailer" default="false"/>
-    <setting label="30007" type="labelenum" values="192|256|384|512|1024" id="imdbscale" default="512"/>
+    <setting type="sep"/>
     <setting label="30008" type="labelenum" values="Keep Original|USA / International|Argentina|Austria|Belgium|Brazil|Bulgaria|Canada|China|Colombia|Chile|Croatia|Czech Republic|Denmark|Finland|France|Germany|Greece|Hong Kong|Hungary|Iceland|India|Israel|Italy|Japan|Mexico|Netherlands|Norway|Pakistan|Poland|Portugal|Romania|Russia|Serbia|Singapore|Slovenia|Spain|Sweden|Switzerland|Thailand|Turkey|Uruguay|Venezuela" id="akatitles" default="Keep Original"/>
+    <setting label="30000" type="bool" id="fullcredits" default="false"/>
+    <setting label="30007" type="labelenum" values="192|256|384|512|1024" id="imdbscale" default="512"/>
 </settings>
